Fixed spacing

--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -115,7 +115,8 @@ body {
 
 .project-text-mobile {
     position: relative;
-    bottom: -30px;
+    bottom: -28px;
+    /* bottom: -15px; */
     font-weight: 300;
     font-size: 20px;
     line-height: 0;
@@ -144,7 +145,7 @@ body {
     display: none;
     padding: 0;
     position: relative;
-    bottom: -15px;
+    bottom: -14px;
     margin-bottom: 10px;
 }
 
